--- a/_config.yml
+++ b/_config.yml
@@ -96,7 +96,7 @@ author:
   flickr           :
   facebook         :
   foursquare       :
-  github           : "a874h"
+  github           : "https://gitlab.com/hazaa" #"a874h"
   google_plus      :
   keybase          :
   instagram        :
