--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ analytics:
 author:
   name             : "Aurélien Hazan"
   avatar           : "profile.png"
-  bio              : "I am an assistant professor in Université Paris-Est Créteil (UPEC)"
+  bio              : "I am an assistant professor at Université Paris-Est Créteil (UPEC)"
   location         : "Paris"
   employer         :
   pubmed           :
